Fix responsiveness of event table and ensure table content is visible

--- a/imports/stylesheets/events.import.styl
+++ b/imports/stylesheets/events.import.styl
@@ -1,32 +1,3 @@
-.events
-  table
-  thead
-  tbody
-  th
-  td
-  tr
-    +below(3)
-      display block
-  thead
-    tr
-      +below(3)
-        position absolute
-        top -9999px
-        left -9999px
-        border 0
-
-    td
-      +below(3)
-        border none
-        border-bottom 1px solid #eee
-        position relative
-        padding-left 50%
-
-  &.table-striped > tbody > tr:nth-child(odd) > td
-  &.table-striped > tbody > tr:nth-child(odd) > th
-    +below(3)
-      background none
-
 #proMedIFrame
   width 100%
   height 600px
@@ -36,7 +7,8 @@
     position relative
     background white
     .lastModifiedDate
-      font-size .8em
+    .lastIncidentDate
+      font-size .9em
   .loading
     position absolute
     left 50%
@@ -51,3 +23,45 @@
       text-transform uppercase
       margin-top .5em
       display block
+
+#user-events-table
+  +below(2)
+    padding 0
+    margin-right -15px
+    margin-left -15px
+    max-width calc(100%  +30px)
+    width calc(100%  +30px)
+    thead
+    tbody
+    th
+    td
+    tr
+      +below(2)
+        display block
+    thead
+      +below(2)
+        display none
+    > tbody
+      > tr
+        margin-bottom 1em
+        > td
+          border 0
+          padding-left 30px
+          padding-right 30px
+          &:first-of-type
+            font-weight 600
+            border-bottom 1px solid $border-primary
+            background $border-primary-light
+            padding-top .5em
+            padding-bottom .5em
+            font-size 1.25em
+          span
+            &::before
+              display block
+              content attr(data-heading)
+              font-weight 600
+
+  &.table-striped > tbody > tr:nth-child(odd) > td
+  &.table-striped > tbody > tr:nth-child(odd) > th
+    +below(3)
+      background none
